# storage/api-docs/api-docs.json
@@ -1946,6 +1946,274 @@
                     }
                 }
             }
+        },
+        "/api/reviews": {
+            "get": {
+                "tags": [
+                    "Reviews"
+                ],
+                "summary": "List of reviews",
+                "operationId": "346169ce6ab0c633530a7cedc1a25fab",
+                "parameters": [
+                    {
+                        "name": "sort_by",
+                        "in": "query",
+                        "description": "Sort either by asc or desc",
+                        "required": false
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Reviews Fetched Successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "success"
+                                        },
+                                        "status": {
+                                            "type": "integer",
+                                            "example": "200"
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/ReviewResource"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated logout",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Unauthenticated"
+                                        },
+                                        "status": {
+                                            "type": "integer",
+                                            "example": "401"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/product-reviews/{productId}": {
+            "get": {
+                "tags": [
+                    "Web API's"
+                ],
+                "summary": "Get reviews for a specific product",
+                "description": "Fetch paginated reviews for a given product ID.",
+                "operationId": "getProductReviews",
+                "parameters": [
+                    {
+                        "name": "productId",
+                        "in": "path",
+                        "description": "The ID of the product",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": 1
+                        }
+                    },
+                    {
+                        "name": "per_page",
+                        "in": "query",
+                        "description": "Number of reviews per page (default is 5)",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "example": 10
+                        }
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "Page number for pagination",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "default": 1
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Product Reviews Fetched Successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Product Reviews Fetched Successfully"
+                                        },
+                                        "status": {
+                                            "type": "integer",
+                                            "example": 200
+                                        },
+                                        "reviews": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/ReviewResource"
+                                            }
+                                        },
+                                        "pagination": {
+                                            "allOf": [
+                                                {
+                                                    "$ref": "#/components/schemas/PaginationResource"
+                                                }
+                                            ]
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "No reviews found for this product",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "No reviews found for this product"
+                                        },
+                                        "status": {
+                                            "type": "integer",
+                                            "example": 404
+                                        },
+                                        "reviews": {
+                                            "type": "array",
+                                            "items": {}
+                                        },
+                                        "pagination": {
+                                            "type": "null"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/top-rated-products": {
+            "get": {
+                "tags": [
+                    "Web API's"
+                ],
+                "summary": "Get top-rated products",
+                "description": "Fetches top-rated products with 5-star reviews, including pagination.",
+                "operationId": "getTopRatedProducts",
+                "parameters": [
+                    {
+                        "name": "per_page",
+                        "in": "query",
+                        "description": "Number of items per page",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "example": 10
+                        }
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "Page number for pagination",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "default": 1
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Top-rated products fetched successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Top-rated products fetched successfully"
+                                        },
+                                        "status": {
+                                            "type": "integer",
+                                            "example": 200
+                                        },
+                                        "products": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/ProductResource"
+                                            }
+                                        },
+                                        "pagination": {
+                                            "allOf": [
+                                                {
+                                                    "$ref": "#/components/schemas/PaginationResource"
+                                                }
+                                            ]
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "No top-rated products found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "No top-rated products found"
+                                        },
+                                        "status": {
+                                            "type": "integer",
+                                            "example": 404
+                                        },
+                                        "products": {
+                                            "type": "array",
+                                            "items": {}
+                                        },
+                                        "pagination": {
+                                            "type": "null"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "components": {
@@ -2222,6 +2490,46 @@
                     "name": "ProductResource"
                 }
             },
+            "ReviewResource": {
+                "title": "ReviewResource",
+                "description": "Review resource representation",
+                "properties": {
+                    "id": {
+                        "description": "Review ID",
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "rating": {
+                        "description": "Rating for the product",
+                        "type": "integer",
+                        "example": 5
+                    },
+                    "profile_image": {
+                        "description": "Customer profile image",
+                        "type": "string",
+                        "example": "https://profile.jpeg"
+                    },
+                    "comment": {
+                        "description": "review content",
+                        "type": "string",
+                        "example": "review content"
+                    },
+                    "name": {
+                        "description": "Customer Name",
+                        "type": "string",
+                        "example": "John Doe"
+                    },
+                    "created_at": {
+                        "description": "Review posted date of product",
+                        "type": "string",
+                        "example": "15 minutes ago"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "ReviewResource"
+                }
+            },
             "PaginationResource": {
                 "title": "PaginationResource",
                 "description": "Pagination meta info resource",
@@ -2303,6 +2611,10 @@
         {
             "name": "Products",
             "description": "Products"
+        },
+        {
+            "name": "Reviews",
+            "description": "Reviews"
         }
     ]
 }
